--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ build-backend = "hatchling.build"
 
 [project.scripts]
 ipfs-mcp-server = "ipfs_mcp_server:main"
+
+[tool.hatch.build]
+include = [
+    "*.py",
+    "py.typed",
+]
